--- a/style.css
+++ b/style.css
@@ -658,7 +658,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757 !important;
+    color: #151313 !important;
 }
 
 .container {
@@ -782,7 +782,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C !important;
+    color: white !important;
 }
 
 .btn-atomic-tangerine {
