--- a/style.css
+++ b/style.css
@@ -195,7 +195,8 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-    color: rgba(0, 0, 0, .5);
+    color: #292949;
+    font-size: 20px;
 }
 
 .d-bloc .panel button:hover,
